--- a/README.adoc
+++ b/README.adoc
@@ -40,7 +40,7 @@ Key Additions:
 
 **Documentation By:** Raymond C. Turner
 
-**Revision:** May 30th, 2024
+**Revision:** May 31st, 2024
 
 
 **codestak.io**
