--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Chatbot Language Trainig Program
+== Chatbot Language Trainig Model
 
 This is a simple chatbot program written in Python. The chatbot is designed to interact with users, answer questions, and learn new responses based on user input. It includes features such as logging, knowledge base management, grammar and spell checking, and more.
 
