--- a/project_structure.adoc
+++ b/project_structure.adoc
@@ -1,8 +1,7 @@
-== Project Structure
+= Python Project Structure
 
 [source, bash]
-
----
+----
 project_name/
 │
 ├── src/                    # Source code directory
@@ -25,11 +24,14 @@ project_name/
 ├── LICENSE                 # Project license file
 ├── .gitignore              # Git ignore file
 └── ...
----
+----
 
-In a typical Python project directory structure, you would place JSON files in a dedicated directory for data files. This directory is usually named `data` or something similar, depending on your preference and the purpose of the JSON files. Here's how you can integrate the JSON files into the existing structure:
+_In a typical Python project directory structure, you would place JSON files in a dedicated directory for data files. This directory is usually named `data` or something similar, depending on your preference and the purpose of the JSON files._
 
-```
+Here's how you can integrate the JSON files into the existing structure:
+
+[source, bash]
+----
 project_name/
 │
 ├── src/                    # Source code directory
@@ -57,9 +59,9 @@ project_name/
 ├── LICENSE                 # Project license file
 ├── .gitignore              # Git ignore file
 └── ...
-```
+----
 
-### Explanation
+== Explanation
 
 - `src/`: Contains the source code of your project.
 - `data/`: Contains JSON files and any other data files your project needs. This directory is separate from your source code and is specifically for storing data that the code will process.
@@ -70,11 +72,12 @@ project_name/
 - `LICENSE`: Contains the license terms for your project.
 - `.gitignore`: Specifies files and directories to be ignored by version control.
 
-### Usage Example in Code
+== Usage Example in Code
 
 When accessing the JSON files in your code, you can use relative paths to refer to the files in the `data` directory. For example:
 
-```python
+[source, python]
+----
 import os
 import json
 
@@ -90,15 +93,14 @@ with open(json_file_path, 'r') as file:
 
 # Process the data
 print(data)
-```
+----
 
 This structure keeps your data files organized and separate from your source code, making it easier to manage and maintain the project.
-
 
 ---
 
 **Documentation By:** Raymond C. Turner
 
-**Revision:** April 9th, 2024
+**Revision:** April 10th, 2024
 
 **codestak.io**
